[package]
name = "rtp"
version = "0.1.0"
authors = ["Alexander Vtyurin <senior.joinu@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0" }

[dependencies]
rand = { version = "0.7.0" }