[package]
name = "wirehair-wrapper"
version = "0.1.0"
authors = ["Alexander Vtyurin <senior.joinu@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Rust wrapper for https://github.com/catid/wirehair"
repository = "https://github.com/seniorjoinu/wirehair-rust-wrapper"

[build-dependencies]
cc = { version = "1.0" }

[dev-dependencies]
rand = { version = "0.7.0" }